--- a/scss/utils/_sidebar.scss
+++ b/scss/utils/_sidebar.scss
@@ -4,7 +4,7 @@
   position: fixed;
   height: 100vh;
   width: 95%;
-  transform: translateX(-120%);
+  transform: translateX(-200%);
   background: #def;
   transition: 0.3s;
   @media (min-width: $mobile-500) {
